# orionfold-proof

./: .gitignore  CHANGELOG.md  CLAUDE.md  HANDOFF.md  LICENSE  README.md  pyproject.toml
.claude/: settings.json  settings.json.example
.claude/agents/: codebase-investigator.md  diff-reviewer.md  security-reviewer.md
.claude/hooks/: secrets-guard.py
.claude/rules/: invariants.md  providers.md  receipts.md  storage.md
.github/workflows/: release.yml
_IDEAS/: README.md  backlog-archive-2026-06-23.md  backlog.md  design-system.md  feature-opportunities.md  issues.md
_REFER/: agentic-engineering-workflow.md  cc-self-improve-all-projects.md  claude-code-opus-4.8-best-practices-2026.md  claude-code-setup.md  counter.md  deep-research-report.md  final.md  happy-path.md  one-product.md  point.md
_SPECS/: 2026-06-22-trustworthy-proof-and-polish.md  2026-06-23-decide-insight-layer.md  2026-06-23-dual-distribution-findings.md  2026-06-23-proof-field-notes.md  2026-06-23-real-world-demo-datasets.md  2026-06-24-b7-private-strategy-symlink.md  2026-06-24-proof-field-note-layer-b-skill.md
docs/: claude-context-and-ux-addendum.md  demo-script.md  opportunity.md  product-brief.md  release-charter.md
docs/adr/: 0000-template.md  0001-local-first-proof-receipt-architecture.md  0002-provider-integration-and-credentials.md  0003-streaming-run-progress.md  0004-dual-distribution-core-shells.md  0005-proof-dogfooding-loop-and-artifacts.md  0006-distribution-and-licensing.md
docs/api/: proof.md  receipts.md
docs/tech/: dependency-policy.md  docs-update-log.md  global-skills-inventory.md  reference-index.md
docs/ux/: accessibility-checklist.md  copy-deck.md  product-design-system.md  usability-checklist.md  visual-verification-checklist.md
docs/worklog/: 2026-06-19-gate4-skeleton.md  2026-06-19-gate5-vertical-slice.md  2026-06-19-gate6-provider-integration.md  2026-06-19-gate7-ship-candidate.md  2026-06-19-scaffold-and-gates-1-3.md  2026-06-20-dataset-import.md  2026-06-20-decision-recipes.md  2026-06-20-design-system-polish.md  2026-06-20-leaderboard-recommendation-fix.md  2026-06-20-light-theme.md  2026-06-20-model-catalog.md  2026-06-20-model-per-candidate-picker.md  2026-06-20-progress-based-idle-timeout.md  2026-06-20-rail-footer-and-task-name.md  2026-06-20-receipt-preview.md  2026-06-20-streamed-progress-and-orientation.md  2026-06-20-ui-feature-review.md  2026-06-20-wire-rail-destinations.md  2026-06-21-browser-smoke-last-three-releases.md  2026-06-21-browser-smoke-meaning-aware-scoring.md  2026-06-21-folder-rename.md  2026-06-21-meaning-aware-scoring.md  2026-06-21-phase-a-openai-token-param-fix.md  2026-06-21-phase-b-realworld-browser-smoke.md  2026-06-21-prompt-aware-mocks.md  2026-06-21-prompt-variant-candidates.md  2026-06-21-scoring-section-design-polish.md  (+33 more)
scripts/: build.sh  build_advisor_pack.py  capture_rail_views.mjs  gen_samples.py
tests/: test_judge.py
web/: index.html  package.json  playwright.config.ts  pnpm-lock.yaml  tsconfig.json  vite.config.ts
(+321 files in other folders)
